HIL/src/objects/Hilliard_Lyons_Account__c.object
<CustomObject>
    <description>Custom object to track the many to many relationship that exists between a Financial Account record and a Client &amp; Prospect record.</description>
    <fields>
        <fullName>Asset_Value_RU__c</fullName>
        <description>Field needed for Rollup</description>
        <label>Asset Value RU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Value__c</fullName>
        <formula>Financial_Account__r.Total_Account_Equity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Available_RU__c</fullName>
        <description>Field needed for Rollup</description>
        <label>Cash Available RU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Available__c</fullName>
        <formula>Financial_Account__r.Cash_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hilliard Lyons Accounts</relationshipLabel>
        <relationshipName>Financial_Account_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Defined by the integration as a combination of Account Number and Tax ID Number or Social Security Number, and potentially a Role or Role Code.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fin_Acct_Num__c</fullName>
        <formula>Financial_Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fin Acct #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Hilliard Lyons Accounts</relationshipLabel>
        <relationshipName>Financial_Account_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Money_Market_RU__c</fullName>
        <description>Field needed for Rollup</description>
        <label>Money Market RU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Money_Market__c</fullName>
        <formula>Financial_Account__r.Money_Market_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Money Market</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_ID__c</fullName>
        <formula>Financial_Account__r.PLAN_ID__c</formula>
        <label>Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Code__c</fullName>
        <formula>Financial_Account__r.Rep_Code__r.Name</formula>
        <label>Rep Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Value_RU__c</fullName>
        <description>Field needed for Rollup</description>
        <label>Revenue Value_RU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Value__c</fullName>
        <formula>Financial_Account__r.Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , &quot;View&quot;, &quot;_self&quot;)</formula>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZMassUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mass Update Checkbox for SysAdmins.</inlineHelpText>
        <label>ZMassUpdate</label>
        <type>Checkbox</type>
    </fields>
    <label>Hilliard Lyons Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Role__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Revenue_Value__c</columns>
        <columns>Asset_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HL_Accounts_HH_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Role__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Revenue_Value__c</columns>
        <columns>Asset_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Revenue_Value__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>HL Accounts-HH Accounts</label>
    </listViews>
    <listViews>
        <fullName>HL_Accounts_HH_AccountsPrime</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Role__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Revenue_Value__c</columns>
        <columns>Asset_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Revenue_Value__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </filters>
        <label>HL Accounts-HH Accounts-Primary</label>
    </listViews>
    <nameField>
        <displayFormat>HLA-{00000}</displayFormat>
        <label>Hilliard Lyons Account#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hilliard Lyons Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>